--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^8.0.1",
     "@tanstack/react-query": "^5.56.2",
+    "@types/three": "^0.175.0",
     "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,10 +59,13 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
+    "tsparticles": "^3.8.1",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
