--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "tsparticles": "^3.8.1",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
+    "vite-plugin-glsl": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
