--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-transition-group": "^4.4.5",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
