--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "PORT=${PORT:-4173} vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@11labs/react": "^0.1.2",
